fixed z-index

--- a/save/webpages/css/wias.css
+++ b/save/webpages/css/wias.css
@@ -41,6 +41,7 @@ html body header #header_box {
   width: 109px;
   height: 110px;
   right: 45%;
+  z-index: 2000;
 }
 
 @media (max-width: 767px) {
